# prabodha

./: .gitignore  AGENTS.md  ASTRO_BUILD_SUMMARY.md  CLAUDE.md  Dockerfile  HANDOFF.md  NOTICE  PRD.md  README.md  RULES.md  SPEC.md  docker-compose.yml  pyproject.toml  vercel.json
.github/workflows/: ci.yml  pages-astro.yml  pages.yml  vercel-deploy.yml
apps/web/: .env.local.example  .env.production  DEPLOY.md  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
configs/: efe_menu.yaml  efe_menu2.yaml  efe_menu3.yaml  efe_menu4.yaml  efe_menu5.yaml  efe_menu6.yaml  efe_menu7.yaml  efe_menu8.yaml  efe_menu9.yaml
configs/experiments/: e1.yaml  e10cross.yaml  e12probe.yaml  e12probe2.yaml  e13full.yaml  e15heldout.yaml  e16corpus_a.yaml  e16corpus_b.yaml  e1b.yaml  e2.yaml  e3.yaml  e4.yaml  e4b.yaml  e5align.yaml  e5tau.yaml  e8dose.yaml  e9flash.yaml  e_l20_bridge.yaml  e_l21_ablation.yaml  e_l21_baselines.yaml  e_l21_jailbreak.yaml  e_l21_truthful.yaml  e_l22_floor.yaml  e_l22_lens_headtohead.yaml  e_l23_harden.yaml
configs/gpu/: gb10_guard.yaml
configs/lens/: fit_default.yaml  fit_mid26.yaml  fit_qwen3_mid30.yaml
configs/models/: nemotron4b.yaml  qwen27b.yaml  qwen3.yaml  (+2 more)
contracts/: L0_foundation.md  L1_qwen_replication.md  L1b_size_matched_retry.md  L20_trained_bridge.md  L21_comparative_eval.md  L2_pwm_stack.md  L3_vimarsa_bridge.md  L4_sphuratta_timing.md  L5_efe_selector.md  L6_cycles.md
docs/: HANDOFF_L19_TO_NEXT.md  RELEASE_NOTES_v1.0.0.md  WS3_CLOSURE_NOTES.md  WS3_DOMAIN_GATE_DEFERRED.md  efe_port_plan.md  gb10_handoff.md  h4_plugin_architecture.md  jspace_pratyabhijna_scoping.md  prior_art_internal.md  product-strategy.md  triz_log.md
examples/: quickstart_nemotron.md  quickstart_qwen3.md
gates/: gate_L0.json  gate_L1.json  gate_L10_cross.json  gate_L11_rep.json  gate_L11_rep_s2024.json  gate_L11_rep_s31415.json  gate_L11_rep_s999.json  gate_L12_flash.json  gate_L12_flash_s123.json  gate_L12_flash_s42.json  gate_L12_flash_s777.json  gate_L13_probe_amp0.6.json  gate_L13_probe_w12.json  gate_L13_probe_w18.json  gate_L13_probe_w24.json  gate_L13_probe_w28.json  gate_L13_recipe.json  gate_L14_amp.json  gate_L14_amp0.1.json  gate_L14_amp0.2.json  gate_L14_amp0.3.json  gate_L14_amp0.45.json  gate_L14_ms123.json  gate_L14_ms2024.json  gate_L14_ms777.json  gate_L14_multiseed.json  gate_L14_readback.json  gate_L14_readback_raw.json  gate_L15_amp_joint.json  gate_L15_amp_s123_a0.1.json  gate_L15_amp_s123_a0.2.json  gate_L15_amp_s123_a0.3.json  gate_L15_amp_s123_a0.45.json  gate_L15_amp_s777_a0.1.json  gate_L15_amp_s777_a0.2.json  gate_L15_amp_s777_a0.3.json  gate_L15_amp_s777_a0.45.json  gate_L15_readback.json  gate_L15_readback_heldout_raw.json  gate_L16_corpus.json  (+103 more)
integrations/prabodha_mcp_server/: __init__.py  __main__.py  pyproject.toml  server.py
integrations/prabodha_mcp_server/tools/: __init__.py  gate_tools.py  lens_tools.py  mechanism_tools.py  steer_tools.py
research/: efe_ledger.jsonl  journal.md  l1_vs_l1b_comparison.md  state.json
scripts/: mcp-domain-gate-validation.sh
services/steer-gateway/: .env.example  Dockerfile  README.md  pyproject.toml
services/steer-gateway/steer_gateway/: __init__.py  main.py  manager.py  runtime.py  schema.py
services/steer-gateway/tests/: test_direction_spec.py  test_main.py  test_schema.py
site/: README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
tests/: test_bridge_trained.py  test_closure.py  test_compare.py  test_configs.py  test_corpus.py  test_e1_metrics.py  test_efe.py  test_eval_baselines.py  test_eval_behavioral.py  test_eval_benchmarks.py  test_eval_compare.py  test_export_app_data.py  test_gpu_guard.py  test_l20_gate.py  test_l23_harden.py  test_mcp_server_integration.py  test_mcp_server_smoke.py  test_mechanisms.py  test_public_api_lens.py  test_public_api_steer.py  test_run_l21_smoke.py  test_smoke_lens.py  test_smoke_steering.py  test_smoke_vis.py  test_stats.py  test_steer_trace_emission.py  test_steering.py  test_steering_direction.py  test_trace_contract.py
web/: index.html  prabodha-data.js  support.js
(+291 files in other folders)
