[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prabodha"
version = "1.0.0"
description = "Recognition-gated workspace steering for language models (PWM x J-space x GNW)"
authors = [{name = "Sharath S", email = "qbz506@york.ac.uk"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "pyyaml>=6", "pydantic>=2.5"]

[project.scripts]
prabodha = "prabodha.cli:main"

[project.optional-dependencies]
lens = ["torch>=2.1", "transformers>=4.40"]
dev = ["pytest>=8", "ruff>=0.4"]
hybrid = ["flash-linear-attention"]  # + causal-conv1d --no-build-isolation (see Dockerfile)

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = ["smoke: end-to-end tiny-model tests (needs torch/transformers/jlens)"]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
# importorskip must run before prabodha.lens imports (torch/jlens optional on CPU CI)
"tests/test_smoke_lens.py" = ["E402"]
"tests/test_smoke_vis.py" = ["E402"]
"tests/test_smoke_steering.py" = ["E402"]
