[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prabodha-mcp-server"
version = "1.0.0"
description = "MCP server exposing prabodha steering tools (lens_map, steer_generate, readback_verify, list_gates)"
authors = [{name = "Sharath S", email = "qbz506@york.ac.uk"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "pydantic>=2.5",
    "pyyaml>=6",
]

[project.scripts]
prabodha-mcp = "prabodha_mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["prabodha_mcp_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["smoke: MCP server startup and tool listing"]
